se modifica nombres campos de faturas y entre ello el logout

--- a/Edwin_Frontend-master/src/app/tabs/tabs.page.html
+++ b/Edwin_Frontend-master/src/app/tabs/tabs.page.html
@@ -8,17 +8,17 @@
 
     <ion-tab-button tab="tab2">
       <ion-icon name="wallet-outline"></ion-icon>
-      <ion-label>Item</ion-label>
+      <ion-label>Articulos</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon name="receipt-outline"></ion-icon>
-      <ion-label>Mirar Facturas</ion-label>
+      <ion-label>ver Facturas</ion-label>
     </ion-tab-button>
 
     <ion-tab-button>
       <ion-icon name="remove-circle-outline"></ion-icon>
-      <ion-label (click)="logOut()">logOut</ion-label>
+      <ion-label (click)="logOut()">log__Out</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
