se agrego parrafo en secion registro Items

--- a/Edwin_Frontend-master/src/app/tab1/tab1.page.html
+++ b/Edwin_Frontend-master/src/app/tab1/tab1.page.html
@@ -32,4 +32,7 @@
       <ion-button (click)="Agendar()" color="success">Register</ion-button>
     </form>
   </ion-list>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, temporibus laborum. Iure, sunt nemo. Expedita tempora, cupiditate fugit aliquid minima modi ut in numquam labore eum optio, alias eaque assumenda.
+  </p>
 </ion-content>
