añadi un parrafo mas

--- a/Edwin_Frontend-master/src/app/tab1/tab1.page.html
+++ b/Edwin_Frontend-master/src/app/tab1/tab1.page.html
@@ -35,4 +35,7 @@
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, temporibus laborum. Iure, sunt nemo. Expedita tempora, cupiditate fugit aliquid minima modi ut in numquam labore eum optio, alias eaque assumenda.
   </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, temporibus laborum. Iure, sunt nemo. Expedita tempora, cupiditate fugit aliquid minima modi ut in numquam labore eum optio, alias eaque assumenda.
+  </p>
 </ion-content>
